# brickgame

./: CMakeLists.txt  Doxyfile  Makefile  README.md
brick_game/base/: BaseConstants.h  BaseModel.h
brick_game/snake/: SnakeModel.cpp
gui/console/: ConsoleView.cpp  ConsoleView.h
gui/console/base/: BaseConsoleView.cpp  BaseConsoleView.h
gui/console/tetris/: TetrisConsoleView.h
gui/desktop/: CMakeLists.txt  mainwindow.h  mainwindow.ui
src/brick_game/snake/: SnakeModel.h
src/brick_game/tetris/: Figure.cpp  Figure.h  TetrisModel.cpp  TetrisModel.h
src/controller/: Controller.h
src/gui/console/: main.cpp
src/gui/console/snake/: SnakeConsoleView.cpp  SnakeConsoleView.h
src/gui/console/tetris/: TetrisConsoleView.cpp
src/gui/desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
tests/: test_snake.cpp  test_tetris.cpp
